--- a/index.html
+++ b/index.html
@@ -699,6 +699,7 @@
             
             .panel {
                 padding: 20px;
+                z-index: 1;
             }
             
             h1 {
